<resources>
    <string name="app_name">VernonGameApplication</string>

    <string name="title_activity_add_review">AddReviewActivity</string>
    <string name="add_game">Add Game</string>
    <string name="input_game_title"></string>
    <string name="input_game_year"></string>
    <string name="input_game_category"></string>

    <string name="game_title">Title:</string>
    <string name="game_year">Game Year</string>
    <string name="game_category">Game Category</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_reviews">ViewReviewsActivity</string>

    <string name="your_game">Your Games</string>
    <string name="save_button">Save</string>
    <string name="view_game_title">Title </string>
    <string name="view_game_year">Year:</string>
    <string name="view_game_category">Category</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

</resources>
