<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vernon.vernongameapplication.Views.AddReviewActivity">

    <TextView android:text="@string/add_game" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/game_title"
        android:id="@+id/game_title"
        android:layout_marginTop="89dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2"
        android:paddingTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/input_game_title"
        android:inputType="textShortMessage"
        android:hint="@string/game_title"
        android:layout_alignTop="@+id/game_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="39dp"
        android:layout_marginEnd="39dp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/game_category"
        android:id="@+id/game_category"
        android:paddingTop="10dp"
        android:layout_below="@+id/input_game_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/input_game_category"
        android:layout_alignTop="@+id/game_category"
        android:layout_alignRight="@+id/input_game_title"
        android:layout_alignEnd="@+id/input_game_title"
        android:hint="@string/game_category"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/game_year"
        android:id="@+id/game_year"
        android:paddingTop="10dp"
        android:layout_below="@+id/input_game_category"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="66dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/input_game_year"
        android:hint="@string/game_year"
        android:layout_alignBottom="@+id/game_year"
        android:layout_alignRight="@+id/input_game_category"
        android:layout_alignEnd="@+id/input_game_category" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/save_button"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Click Save only Once then click on Clear"
        android:id="@+id/textView3"
        android:layout_above="@+id/save_button"
        android:layout_toLeftOf="@+id/input_game_title"
        android:layout_toStartOf="@+id/input_game_title" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clear"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />


</RelativeLayout>